crates/ty_python_semantic/resources/mdtest/snapshots/super.md_-_Super_-_Basic_Usage_-_Implicit_Super_Objec…_(f9e5e48e3a4a4c12).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: super.md - Super - Basic Usage - Implicit Super Object
mdtest path: crates/ty_python_semantic/resources/mdtest/class/super.md
---

# Python source files

## mdtest_snippet.py

```
  1 | from __future__ import annotations
  2 | 
  3 | class A:
  4 |     def __init__(self, a: int): ...
  5 |     @classmethod
  6 |     def f(cls): ...
  7 | 
  8 | class B(A):
  9 |     def __init__(self, a: int):
 10 |         reveal_type(super())  # revealed: <super: <class 'B'>, B>
 11 |         reveal_type(super(object, super()))  # revealed: <super: <class 'object'>, super>
 12 |         super().__init__(a)
 13 | 
 14 |     @classmethod
 15 |     def f(cls):
 16 |         # TODO: Once `cls` is supported, this should be `<super: <class 'B'>, <class 'B'>>`
 17 |         reveal_type(super())  # revealed: <super: <class 'B'>, Unknown>
 18 |         super().f()
 19 | 
 20 | super(B, B(42)).__init__(42)
 21 | super(B, B).f()
 22 | import enum
 23 | from typing import Any, Self, Never, Protocol, Callable
 24 | from ty_extensions import Intersection
 25 | 
 26 | class BuilderMeta(type):
 27 |     def __new__(
 28 |         cls: type[Any],
 29 |         name: str,
 30 |         bases: tuple[type, ...],
 31 |         dct: dict[str, Any],
 32 |     ) -> BuilderMeta:
 33 |         # revealed: <super: <class 'BuilderMeta'>, Any>
 34 |         s = reveal_type(super())
 35 |         # revealed: Any
 36 |         return reveal_type(s.__new__(cls, name, bases, dct))
 37 | 
 38 | class BuilderMeta2(type):
 39 |     def __new__(
 40 |         cls: type[BuilderMeta2],
 41 |         name: str,
 42 |         bases: tuple[type, ...],
 43 |         dct: dict[str, Any],
 44 |     ) -> BuilderMeta2:
 45 |         # revealed: <super: <class 'BuilderMeta2'>, <class 'BuilderMeta2'>>
 46 |         s = reveal_type(super())
 47 |         return reveal_type(s.__new__(cls, name, bases, dct))  # revealed: BuilderMeta2
 48 | 
 49 | class Foo[T]:
 50 |     x: T
 51 | 
 52 |     def method(self: Any):
 53 |         reveal_type(super())  # revealed: <super: <class 'Foo'>, Any>
 54 | 
 55 |         if isinstance(self, Foo):
 56 |             reveal_type(super())  # revealed: <super: <class 'Foo'>, Any>
 57 | 
 58 |     def method2(self: Foo[T]):
 59 |         # revealed: <super: <class 'Foo'>, Foo[T@Foo]>
 60 |         reveal_type(super())
 61 | 
 62 |     def method3(self: Foo):
 63 |         # revealed: <super: <class 'Foo'>, Foo[Unknown]>
 64 |         reveal_type(super())
 65 | 
 66 |     def method4(self: Self):
 67 |         # revealed: <super: <class 'Foo'>, Foo[T@Foo]>
 68 |         reveal_type(super())
 69 | 
 70 |     def method5[S: Foo[int]](self: S, other: S) -> S:
 71 |         # revealed: <super: <class 'Foo'>, Foo[int]>
 72 |         reveal_type(super())
 73 |         return self
 74 | 
 75 |     def method6[S: (Foo[int], Foo[str])](self: S, other: S) -> S:
 76 |         # revealed: <super: <class 'Foo'>, Foo[int]> | <super: <class 'Foo'>, Foo[str]>
 77 |         reveal_type(super())
 78 |         return self
 79 | 
 80 |     def method7[S](self: S, other: S) -> S:
 81 |         # error: [invalid-super-argument]
 82 |         # revealed: Unknown
 83 |         reveal_type(super())
 84 |         return self
 85 | 
 86 |     def method8[S: int](self: S, other: S) -> S:
 87 |         # error: [invalid-super-argument]
 88 |         # revealed: Unknown
 89 |         reveal_type(super())
 90 |         return self
 91 | 
 92 |     def method9[S: (int, str)](self: S, other: S) -> S:
 93 |         # error: [invalid-super-argument]
 94 |         # revealed: Unknown
 95 |         reveal_type(super())
 96 |         return self
 97 | 
 98 |     def method10[S: Callable[..., str]](self: S, other: S) -> S:
 99 |         # error: [invalid-super-argument]
100 |         # revealed: Unknown
101 |         reveal_type(super())
102 |         return self
103 | 
104 | type Alias = Bar
105 | 
106 | class Bar:
107 |     def method(self: Alias):
108 |         # revealed: <super: <class 'Bar'>, Bar>
109 |         reveal_type(super())
110 | 
111 |     def pls_dont_call_me(self: Never):
112 |         # revealed: <super: <class 'Bar'>, Unknown>
113 |         reveal_type(super())
114 | 
115 |     def only_call_me_on_callable_subclasses(self: Intersection[Bar, Callable[..., object]]):
116 |         # revealed: <super: <class 'Bar'>, Bar>
117 |         reveal_type(super())
118 | 
119 | class P(Protocol):
120 |     def method(self: P):
121 |         # revealed: <super: <class 'P'>, P>
122 |         reveal_type(super())
123 | 
124 | class E(enum.Enum):
125 |     X = 1
126 | 
127 |     def method(self: E):
128 |         match self:
129 |             case E.X:
130 |                 # revealed: <super: <class 'E'>, E>
131 |                 reveal_type(super())
```

# Diagnostics

```
error[invalid-super-argument]: `S@method7` is not an instance or subclass of `<class 'Foo'>` in `super(<class 'Foo'>, S@method7)` call
  --> src/mdtest_snippet.py:83:21
   |
81 |         # error: [invalid-super-argument]
82 |         # revealed: Unknown
83 |         reveal_type(super())
   |                     ^^^^^^^
84 |         return self
   |
info: Type variable `S` has `object` as its implicit upper bound
info: `object` is not an instance or subclass of `<class 'Foo'>`
help: Consider adding an upper bound to type variable `S`
info: rule `invalid-super-argument` is enabled by default

```

```
error[invalid-super-argument]: `S@method8` is not an instance or subclass of `<class 'Foo'>` in `super(<class 'Foo'>, S@method8)` call
  --> src/mdtest_snippet.py:89:21
   |
87 |         # error: [invalid-super-argument]
88 |         # revealed: Unknown
89 |         reveal_type(super())
   |                     ^^^^^^^
90 |         return self
   |
info: Type variable `S` has upper bound `int`
info: `int` is not an instance or subclass of `<class 'Foo'>`
info: rule `invalid-super-argument` is enabled by default

```

```
error[invalid-super-argument]: `S@method9` is not an instance or subclass of `<class 'Foo'>` in `super(<class 'Foo'>, S@method9)` call
  --> src/mdtest_snippet.py:95:21
   |
93 |         # error: [invalid-super-argument]
94 |         # revealed: Unknown
95 |         reveal_type(super())
   |                     ^^^^^^^
96 |         return self
   |
info: Type variable `S` has constraints `int, str`
info: `int | str` is not an instance or subclass of `<class 'Foo'>`
info: rule `invalid-super-argument` is enabled by default

```

```
error[invalid-super-argument]: `S@method10` is a type variable with an abstract/structural type as its bounds or constraints, in `super(<class 'Foo'>, S@method10)` call
   --> src/mdtest_snippet.py:101:21
    |
 99 |         # error: [invalid-super-argument]
100 |         # revealed: Unknown
101 |         reveal_type(super())
    |                     ^^^^^^^
102 |         return self
    |
info: Type variable `S` has upper bound `(...) -> str`
info: rule `invalid-super-argument` is enabled by default

```
